@@ -13,6 +13,9 @@ summary: Aggiorna il tuo sistema di storage ONTAP per sfruttare le nuove e migli
 [role="lead"]
 Dopo aver identificato la versione di destinazione di ONTAP, corretto e riconosciuto tutti i blocchi, è possibile avviare l'aggiornamento del sistema di storage ONTAP.
 
+.Ruolo BlueXP richiesto:
+Amministratore dell'organizzazione, amministratore di cartelle o progetti, amministratore di archiviazione o specialista dell'integrità del sistema. link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html["Scopri di più sui ruoli di accesso BlueXP."^]
+
 .Fasi
 . Dal menu di navigazione BlueXP  sinistro, selezionare *integrità > aggiornamenti software*.
 +
