@@ -23,15 +23,10 @@
   <block id="7d73325ccb71b4870e81c3c8734ba56e" category="paragraph">Dopo aver identificato la versione di destinazione di ONTAP per il sistema di storage ONTAP, è necessario correggere e riconoscere tutti i blocchi e rivedere gli avvisi prima di aggiornare il sistema di storage ONTAP.</block>
   <block id="2458f462c36fbeec4b6536099135f298" category="paragraph">La correzione e la conferma di tutti i blocchi è obbligatoria e garantisce un processo di aggiornamento del software senza interruzioni.</block>
   <block id="a710a4a4b33a19ce9678b290e8622101" category="paragraph">Viene visualizzato l'elenco dei cluster che richiedono un aggiornamento software.</block>
-  <block id="06cd15ffbdad395f54961af4b4da3f7d" category="list-text">Dopo aver deciso la versione di destinazione di ONTAP, fare clic su *prepara per l'aggiornamento* per avviare il processo di aggiornamento.</block>
   <block id="921328cf9f5d7f1029ee8f2b5eb6add6" category="paragraph">Viene visualizzato l'elenco dei blocchi e delle avvertenze.</block>
   <block id="0d3e45ea704fa7abdf905562392b0203" category="list-text">Selezionare il blocco per visualizzare le istruzioni per correggere il blocco.</block>
   <block id="8aa655b81ac9a54174b8b2f3c0e078b3" category="list-text">Eseguire manualmente i passaggi forniti per correggere il blocco.</block>
-  <block id="dd65b396655e879f1cc555905f551ba9" category="list-text">Selezionare i blocchi che sono stati corretti e fare clic su *Conferma selezione* per confermare che i blocchi sono stati corretti.</block>
   <block id="deef003c349019061441ab60dd6ecf90" category="admonition">È necessario correggere e confermare tutti i blocchi per procedere con l'aggiornamento.</block>
-  <block id="f00541528c969eb6abe8cce5f5281ccc" category="list-text">Fare clic sulla scheda *Avvertenze* per rivedere gli avvisi prima di procedere con l'aggiornamento del software.</block>
-  <block id="3a49822934e3057e70050398c92aa888" category="list-text">Fare clic sulla scheda *Conferma* per visualizzare i blocchi che sono stati corretti.</block>
-  <block id="5143d195cc41390e0e4722e37a8b670d" category="list-text">Fare clic su *continua per aggiornare* per procedere con il processo di aggiornamento.</block>
   <block id="0fd40a88a795a27afa35dc3e7dbce97c" category="summary">Aggiorna il tuo sistema di storage ONTAP per sfruttare le nuove e migliorate funzioni.</block>
   <block id="ef54c6082f1b8fb3ea432a9b7cdce377" category="doc">Aggiornamento completo del sistema storage ONTAP</block>
   <block id="84159d0a25239d2d4573172d023c46e7" category="list-text">Leggere e accettare il contratto di licenza per l'utente finale.</block>
@@ -51,7 +46,6 @@
   <block id="24958f1bc0c9e80abac7daea72c06854" category="list-text">Dal menu di navigazione BlueXP  sinistro, selezionare *integrità &gt; aggiornamenti software.*</block>
   <block id="20b41c007263bf3cb834352319595be6" category="summary">Esaminare i prerequisiti e i requisiti prima di procedere con l'aggiornamento di ONTAP.</block>
   <block id="7efc4f28b854970100677afdf18e3743" category="paragraph">Per utilizzare gli aggiornamenti software BlueXP , è necessario assicurarsi che l'ambiente soddisfi tutti i requisiti.</block>
-  <block id="f79a5712ad4df34137efe352ad13262f" category="list-text">Administrator Privileges è disponibile per eseguire l'aggiornamento del software utilizzando Gestione sistema.</block>
   <block id="0a97d1300ce9361165541c64b6bd10b7" category="list-text">Le credenziali di amministratore sono disponibili per il cluster desiderato durante l'esecuzione dell'aggiornamento software.</block>
   <block id="b34cd7f587984e9b254885f6d8640801" category="list-text">Tutti i nodi nel cluster inviano dati AutoSupport.</block>
   <block id="27eb16a8f5038a8a66d0aec86d022bbd" category="list-text">Tutti i nodi devono essere eseguiti su ONTAP 9,10 o versioni successive.</block>
@@ -151,8 +145,6 @@
   <block id="9d06990508d25d367d9158c6558eb9c8" category="list-text"><block ref="9d06990508d25d367d9158c6558eb9c8" category="inline-link-macro-rx"></block></block>
   <block id="7450cfde7058dc5e1f7909d0280fd7ae" category="inline-link-macro">Azure NetApp Files</block>
   <block id="2e0c742f4616eb27b5b7646aa790edfe" category="list-text"><block ref="2e0c742f4616eb27b5b7646aa790edfe" category="inline-link-macro-rx"></block></block>
-  <block id="b0cee72642f5457a71ddd0b49efb6d93" category="inline-link-macro">Cloud Volumes Service per Google Cloud</block>
-  <block id="cf14bff66a8b72d3675db8ffe0f02ee3" category="list-text"><block ref="cf14bff66a8b72d3675db8ffe0f02ee3" category="inline-link-macro-rx"></block></block>
   <block id="3880ae5df9fdc4d0fc4a6d00a2239530" category="paragraph">Per ricevere supporto tecnico specifico di BlueXP e delle relative soluzioni e servizi storage, utilizza le opzioni di supporto descritte di seguito.</block>
   <block id="edd15fbeb7b2dffa163336ecd4f3e80c" category="section-title">Utilizzare le opzioni di supporto automatico</block>
   <block id="5e4b821a1a82558dead1ef6961e90666" category="paragraph">Queste opzioni sono disponibili gratuitamente, 24 ore su 24, 7 giorni su 7:</block>
@@ -308,7 +300,6 @@
   <block id="33871b6190a8d5adbe8b15282054766c" category="sidebar">Novità</block>
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Conoscenza e supporto</block>
   <block id="e9286f8f31c5b4b57dc1c4b27396c2bf" category="paragraph">Ciò è dovuto alla versione corrente di ONTAP e alla mancata disponibilità del connettore BlueXP  per i cluster. BlueXP  Connector esegue l'aggiornamento ONTAP all'interno di BlueXP  e non richiede di uscire da BlueXP  per un aggiornamento. Se non disponi di un connettore BlueXP , verrai reindirizzato a System Manager e ti verrà richiesto di inserire nuovamente le credenziali del cluster ONTAP. Per informazioni sul processo di aggiornamento di ONTAP per diverse versioni di ONTAP, vedere <block ref="9368a1ed7fc94ef1fa0dd54dc646113b" category="inline-link-macro-rx"></block>.</block>
-  <block id="7fd857a6ab8e5cb6d32815d3414ad1f1" category="list-text">È disponibile un'organizzazione BlueXP .</block>
   <block id="6e3e90ee630b7faf0d6dad037bbd177a" category="list-text">In BlueXP  viene creato un ambiente di lavoro.</block>
   <block id="98d90e398fc56688ddc647e5f49075ec" category="paragraph">L'elenco degli ambienti di lavoro rientra nell'ambito dell'organizzazione (o account), del progetto (o dell'area di lavoro) BlueXP  e del connettore selezionato nell'intestazione superiore del servizio.</block>
   <block id="29360bfcdbc91d3f1514c372b4585965" category="list-text">Registrazione del numero di serie dell'account BlueXP  (il numero di serie 960xxxxxxxxx a 20 cifre si trova nella pagina risorse di supporto di BlueXP ).</block>
@@ -344,4 +335,20 @@
   <block id="f50a226c5a51111405309ae78236d95d" category="doc">Rischi mitigati</block>
   <block id="66fa090892a2bd81c896ab6fbf156b19" category="paragraph">Nella sezione riepilogativa degli aggiornamenti software BlueXP , è ora possibile visualizzare il numero totale di rischi che possono essere mitigati dall'aggiornamento del sistema operativo. Ciò consente agli utenti di valutare i miglioramenti della sicurezza e della stabilità nella base di installazione.</block>
   <block id="47388f68695ab5799ff2adfb33bca00d" category="section-title">02 aprile 2025</block>
+  <block id="eb41c324559b969116f2a7d0e5a512c7" category="paragraph-title">Ruolo BlueXP richiesto:</block>
+  <block id="fd3b9b6f969e334605ecb2deacbd84cc" category="inline-link-macro">Scopri di più sui ruoli di accesso BlueXP.</block>
+  <block id="4de48b1d25f387ca4892d8634f62973e" category="paragraph">Amministratore dell'organizzazione, amministratore di cartelle o progetti, amministratore di archiviazione o specialista dell'integrità del sistema. <block ref="6677d2bbecb9c8fe39d4645334e442a8" category="inline-link-macro-rx"></block></block>
+  <block id="0fdb0ceffdc4d2d2cdb1f927a8e4bbe5" category="list-text">Selezionare *Avvia aggiornamento* per avviare il processo di aggiornamento.</block>
+  <block id="33ba4cda6895a31680b2de36d86dab15" category="list-text">Dopo aver scelto la versione di destinazione ONTAP , selezionare *Prepara per l'aggiornamento* per avviare il processo di aggiornamento.</block>
+  <block id="6a9157b81110d193ae9726acd434a73b" category="list-text">Seleziona i blocchi che sono stati risolti e seleziona *Riconosci selezione* per confermare che i blocchi sono stati risolti.</block>
+  <block id="f1bceb312606e73e3fc3cb05ba0db012" category="list-text">Selezionare la scheda *Avvisi* per leggere gli avvisi prima di procedere con l'aggiornamento software.</block>
+  <block id="185674eb1bcbdcee59090d2a4854c5bd" category="list-text">Selezionare la scheda *Riconosci* per visualizzare i blocchi che sono stati risolti.</block>
+  <block id="46ab049c063b4859793fe4d01b477a97" category="list-text">Selezionare *Continua ad aggiornare* per procedere con il processo di aggiornamento.</block>
+  <block id="b6f64caf7d0bc5014c5dc5b478d3b150" category="paragraph">Amministratore dell'organizzazione, amministratore di cartelle o progetti, amministratore di archiviazione, visualizzatore di archiviazione o specialista dell'integrità del sistema. <block ref="6677d2bbecb9c8fe39d4645334e442a8" category="inline-link-macro-rx"></block></block>
+  <block id="1da5a40083bd16c3443e7eda42875506" category="doc">Ruolo di accesso BlueXP necessario</block>
+  <block id="53dafb5a873d00157d780f773c016fed" category="paragraph">Ora è necessario uno dei seguenti ruoli di accesso per installare gli aggiornamenti software: *Amministratore organizzazione*, *Amministratore cartella o progetto*, *Amministratore archiviazione*, *Visualizzatore archiviazione* o *Specialista integrità archiviazione*. Gli utenti con il ruolo di Visualizzatore archiviazione dispongono di diverse autorizzazioni relative agli aggiornamenti software, ma non possono installarli. <block ref="5f4605f8f9a6dca73fc40e564cf6fcbc" category="inline-link-macro-rx"></block></block>
+  <block id="0a7ea76c19ce14ea769fa96b38086400" category="paragraph">È inoltre necessario disporre di uno dei seguenti ruoli di accesso: amministratore dell'organizzazione, amministratore della cartella o del progetto oppure amministratore dell'archiviazione.</block>
+  <block id="e48502083eb8949c8f65b2ccddd5adec" category="section-title">12 maggio 2025</block>
+  <block id="1215f8190533dfdf63d2224a6d88266f" category="inline-link-macro">Google Cloud NetApp Volumes</block>
+  <block id="cb4bf32603c89d08cad17e7e7dd302f2" category="list-text"><block ref="cb4bf32603c89d08cad17e7e7dd302f2" category="inline-link-macro-rx"></block></block>
 </blocks>
